--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-groq = "^0.9.0"
+colorama = "^0.4.6"
+graphviz = "^0.20.3"
+deepseek = "^1.0.0"
 jupyter = "^1.0.0"
 python-dotenv = "^1.0.1"
-colorama = "^0.4.6"
 types-colorama = "^0.4.15.20240311"
-graphviz = "^0.20.3"
+requests = "^2.32.4"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
